[package]
name = "maschine"
version = "0.1.0"
authors = ["niklas2612 <niklas99@partybombe.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
raft = "0.5.0"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.5.0"


